--- a/node/src/views/admin/patirals/header.pug
+++ b/node/src/views/admin/patirals/header.pug
@@ -22,16 +22,21 @@ header.header
             ul.dropdown-menu.dropdown-menu-end.shadow-lg(aria-labelledby="navbarDropdown")
               li
                 a.dropdown-item(href="/admin/dashboard") Tổng quan
-              li
-                a.dropdown-item(href=`${prefixAdmin}/products`) Danh sách sản phẩm
-              li
-                a.dropdown-item(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
-              li
-                a.dropdown-item(href=`${prefixAdmin}/roles`) Nhóm quyền
-              li
-                a.dropdown-item(href=`${prefixAdmin}/roles/permissions`) Phân quyền
-              li
-                a.dropdown-item(href=`${prefixAdmin}/accounts`) Danh sách tài khoản
+              if (role.permissions.includes("products_view"))
+                li
+                  a.dropdown-item(href=`${prefixAdmin}/products`) Danh sách sản phẩm
+              if (role.permissions.includes("products-category_view"))
+                li
+                  a.dropdown-item(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
+              if (role.permissions.includes("roles_view"))
+                li
+                  a.dropdown-item(href=`${prefixAdmin}/roles`) Nhóm quyền
+              if (role.permissions.includes("roles_permissions"))
+                li
+                  a.dropdown-item(href=`${prefixAdmin}/roles/permissions`) Phân quyền
+              if (role.permissions.includes("accounts_view"))
+                li
+                  a.dropdown-item(href=`${prefixAdmin}/accounts`) Danh sách tài khoản
 
 style.
   .navbar-nav .nav-link {
